--- a/Principal (Anglais)/index.html
+++ b/Principal (Anglais)/index.html
@@ -138,7 +138,7 @@
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 thumb">
                   <div class="service-box"><a href="./blog.html">
                      <figure>
-                        <img  src="images/1.jpg" class="zoom img-fluid "  alt="blog">
+                        <img id="onglet" src="images/1.jpg" class="zoom img-fluid "  alt="blog">
 
                         <span class="hoverle">
                            <span>Our blog</span>
@@ -149,7 +149,7 @@
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 thumb">
                   <div class="service-box"><a href="./equipe.html">
                      <figure>
-                        <img  src="images/2.jpg" class="zoom img-fluid "  alt="team">
+                        <img id="onglet" src="images/2.jpg" class="zoom img-fluid "  alt="team">
 
                         <span class="hoverle">
                            <span>Our team</span>
@@ -160,7 +160,7 @@
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 thumb">
                   <div class="service-box"><a href="./aide.html">
                      <figure>
-                        <img  src="images/3.jpg" class="zoom img-fluid "  alt="faq">
+                        <img id="onglet" src="images/3.jpg" class="zoom img-fluid "  alt="faq">
                         <span class="hoverle">
                            <span>FAQ</span>
                      </figure></a>
