--- a/Principal/index.html
+++ b/Principal/index.html
@@ -147,7 +147,7 @@
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 thumb">
                   <div class="service-box"><a href="./blog.html">
                      <figure>
-                        <img  src="images/1.jpg" class="zoom img-fluid "  alt="blog">
+                        <img  id="onglet" src="images/1.jpg" class="zoom img-fluid "  alt="blog">
                         
                         <span class="hoverle">
                            <span>Notre blog</span>
@@ -158,7 +158,7 @@
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 thumb">
                   <div class="service-box"><a href="./equipe.html">
                      <figure>
-                        <img  src="images/2.jpg" class="zoom img-fluid "  alt="equipe">
+                        <img id="onglet" src="images/2.jpg" class="zoom img-fluid "  alt="equipe">
                         
                         <span class="hoverle">
                            <span>Notre équipe</span>
@@ -169,7 +169,7 @@
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 thumb">
                   <div class="service-box"><a href="./aide.html">
                      <figure>                       
-                        <img  src="images/3.jpg" class="zoom img-fluid "  alt="faq">
+                        <img id="onglet" src="images/3.jpg" class="zoom img-fluid "  alt="faq">
                         <span class="hoverle">
                            <span>FAQ</span>
                      </figure></a>
