--- a/Principal (Anglais)/aide.html
+++ b/Principal (Anglais)/aide.html
@@ -118,7 +118,7 @@
                 <br>
 
                 <div>
-                    <a href="#Collapsedeco" data-toggle="collapse" aria-expanded="false" aria-controls="Collapsedeco">Comment se déconnecter de son compte?</a>
+                    <a href="#Collapsedeco" data-toggle="collapse" aria-expanded="false" aria-controls="Collapsedeco">How to log out of your account ?</a>
                     <section id="Collapsedeco" class="collapse">
                         <div class="colCompte">
                             <p>You want to log out from your account ? Nothing easier !</p>
@@ -135,7 +135,7 @@
                 <br>
 
                 <div>
-                    <a href="#Collapsesup" data-toggle="collapse" aria-expanded="false" aria-controls="Collapsesup">Comment supprimer son compte ?</a>
+                    <a href="#Collapsesup" data-toggle="collapse" aria-expanded="false" aria-controls="Collapsesup">How to delete your account ?</a>
                     <section id="Collapsesup" class="collapse">
                         <div class="colCompte">
                             <p>Oh misery ! Oh sorrow... We have a man doooooooown !<br>Just kidding, how to delete an account?</p>
