--- a/Principal (Anglais)/blog.html
+++ b/Principal (Anglais)/blog.html
@@ -160,26 +160,26 @@
                 <div class="row">
                     <img class="imgBlog" src="image/platAsie.jpg" alt="Plat Asiatique">
                 </div>
-                <h4><strong>Date: 1 janvier 2020</strong></h4>
-                <h4><strong>La brigade du tigre, gare aux représailles !</strong></h4>
+                <h4><strong>Date: January 1st, 2020</strong></h4>
+                <h4><strong>La brigade du tigre, beware of retaliation !</strong></h4>
                 <div>
-                    <i><a href="#CollapseTigre" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseTigre">En lire plus</a></i>
+                    <i><a href="#CollapseTigre" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseTigre">Read more</a></i>
                     <section id="CollapseTigre" class="collapse">
                         <div class="colBlog">
                             <p>
-                                La Brigade du Tigre, c’est le second restaurant d’Adrien Ferrand, à quelques pas du premier Eels, rue du Faubourg Poissonnière. Le pari ? Un voyage aux quatre coins de l’Asie, de la Thaïlande au Sri-Lanka, des incontournables de la street food aux spécialités traditionnelles, opéré par le chef Galien Emery.
+                                it's Adrien Ferrand's second restaurant,just a few steps from the first Eels, rue du Faubourg Poissonnière. A bet ? A trip all around Asia, from Thailand to Sri Lanka, the inevitables of traditional street food, run by chef Galien Emery.
                                 <br><br>
-                                <strong>Dans nos assiettes ?</strong>
-                                <br>3 menus déjeuner entrée-plat-dessert<br>
-                                Rouleau d’automne – miso rouge<br>Crab Cake – mayo piment<br>Raviolis grillés de champignons – Tom Kha pommes de terre
-                                <br>Tataki de boeuf de Galice – black beans<br>Merlu – chou pointu grillé – combawa gingembre
-                                <br>Poitrine de cochon confite et laquée – légumes verts – riz sauté<br>Mango sticky rice
-                                <br>Cake coco caramélisé – caramel cacahuète<br><br>
-                                <strong>C’est combien ?</strong>
-                                <br>Entrée – plat -dessert : 23€ // Entrée – plat ou plat – dessert : 19€
+                                <strong>In your plates ?</strong>
+                                <br>A 3 course lunch appetizer-main dish-dessert<br>
+                                Autumn rolls – red miso<br>Crab Cake – spicy mayo<br>Grilled mushroom dumplings – potato Tom Kha
+                                <br>Beef tataki of Galice – black beans<br>Merlu – Oxheart cabbage  – ginger combawa
+                                <br>Confit and lacquered pork breast – légumes verts green veggies – fried rice<br>Mango sticky rice
+                                <br>Caramelized cake coco – peanut caramel<br><br>
+                                <strong>How much ?</strong>
+                                <br>Appetizer – main dish - dessert : 23€ // Appetizer – main dish ou main dish – dessert : 19€
                                 <br><br>
-                                <strong>Avec ça on a une faim de loup ! (enfin de tigre ça le fait mieux) </strong>
-                                Source: <a>http://parisianavores.paris/la-brigade-du-tigre-restaurant-paris-10/</a>
+                                <strong> With that, you'll be as hugry as a wolf !(or as tiger, that makes more sense) </strong>
+                                Source: <a> http://parisianavores.paris/la-brigade-du-tigre-restaurant-paris-10/</a>
                             </p>
                         </div>
                     </section>
